Setup form auth handler and configured jvm env vars

--- a/app/src/main/webapp/templates/login.html
+++ b/app/src/main/webapp/templates/login.html
@@ -5,8 +5,8 @@
     <title>Login</title>
 </head>
 <body>
-<form action="#" method="post">
-    <label th:for="username">Username:</label>
+<form action="/app/doLogin" method="post">
+    <label for="username">Username:</label>
     <input id="username" name="username" type="text"/>
 
     <label for="password">Password:</label>
