--- a/app/src/main/webapp/templates/login.html
+++ b/app/src/main/webapp/templates/login.html
@@ -5,7 +5,7 @@
     <title>Login</title>
 </head>
 <body>
-<form action="/app/doLogin" method="post">
+<form action="/app/login" method="post">
     <label for="username">Username:</label>
     <input id="username" name="username" type="text"/>
 
