--- a/app/src/main/webapp/templates/fragments/header.html
+++ b/app/src/main/webapp/templates/fragments/header.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <title>FRAGMENTS</title>
+    <link rel="stylesheet" type="text/css" href="../../static/css/app.css"/>
 </head>
 <body>
 <div th:fragment="header" class="header green">
