--- a/app/src/main/webapp/templates/fragments/app/fragments.html
+++ b/app/src/main/webapp/templates/fragments/app/fragments.html
@@ -3,17 +3,19 @@
 <head>
     <title>FRAGMENTS</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.js" type="javascript"></script>
-    <link rel="stylesheet" type="text/css" href="../../static/css/app.css"/>
+    <link rel="stylesheet" type="text/css" href="../../../static/css/app.css"/>
 </head>
 <body>
 
+<div th:fragment="__body" id="app-home-body">
+    <script type="text/javascript" src="../../../static/js/app.js"></script>
+</div>
 
-<div th:fragment="header" class="header green">
+<div th:fragment="__header" class="header green">
     <form action="/app/logout" method="post">
         <button>Logout</button>
     </form>
 </div>
-
 
 </body>
 </html>
