--- a/app/src/main/webapp/templates/index.html
+++ b/app/src/main/webapp/templates/index.html
@@ -6,7 +6,6 @@
 
 
 <head>
-    <script src="../static/js/sample.js"></script>
     <link rel="stylesheet" type="text/css" href="../static/css/not-found.css"/>
 </head>
 
@@ -14,5 +13,8 @@
 I have a message: Hey der
 <!--/*@thymesVar id="context" type=""*/-->
 <div th:text="${(context.get('user'))}"></div>
+<div>This is my react message: <div id="target"></div></div>
+
+<script src="../static/js/app.js" type="text/javascript"></script>
 </body>
 </html>
