Removed 3rd party libs from bundle. Created a mixin.
- jquery, react, react-dom will be loaded via CDN
- Common scripts have their own thymeleaf fragment
- Created a simple HigherOrderComponent for fetching data on interval
- Changed some ts/js IDE code formatting

--- a/app/src/main/webapp/templates/app/home.html
+++ b/app/src/main/webapp/templates/app/home.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8"/>
     <title>App</title>
+
+    <div th:replace="templates/fragments/app/fragments.html :: __common_scripts"></div>
+
+    <script type="text/javascript" src="../../static/js/app.js"></script>
+
     <link rel="stylesheet" type="text/css" href="../../static/css/app.css"/>
 </head>
 <body>
@@ -11,8 +16,8 @@
     This is the static header
 </div>
 
-<div id="app-home-body" th:replace="templates/fragments/app/fragments.html :: __body">
-    This is the static body
-</div>
+<!--MOUNT POINT-->
+<div id="app-home-body"></div>
+
 </body>
 </html>
