Added material-ui, pure-render, immutable, type-check

--- a/app/src/main/webapp/templates/fragments/app/fragments.html
+++ b/app/src/main/webapp/templates/fragments/app/fragments.html
@@ -9,8 +9,8 @@
 <!--OR... th:remove="tag" to remove the outer tag-->
 <th:block th:fragment="__common_scripts">
     <script type="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.3/jquery.js"></script>
-    <script type="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.2/react-dom.js"></script>
-    <script type="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.2/react.js"></script>
+    <!--<script type="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.2/react.js"></script>-->
+    <!--<script type="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.2/react-dom.js"></script>-->
 </th:block>
 
 <div th:fragment="__header" class="header green">
